--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,8 @@ input {
 	margin: 2 2 2 2;
 	padding: 0 0 0 0;
 	text-indent: 0px;
+	box-sizing: border-box;
+    -webkit-appearance: button;
     }
 
 form {
