Delta time relative to events

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,10 +77,12 @@ td {
 
 .task {
     font-family: "Courier New", Courier, monospace;
+    font-weight: normal;
     }
     
 .sequence {
     font-family: "Courier New", Courier, monospace;
+    font-weight: normal;
     }
     
 .container {
