--- a/templates/iphone5.html
+++ b/templates/iphone5.html
@@ -20,7 +20,7 @@
             <td><div id="{{ temp.name }}" class="tempF">{{ temp.getViewState(views) }}</div></td>
         </tr>
     </table>
-    {{ spaTempTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, views=views) }}
+    {{ spaTempTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
     <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
         {% for w in widths[1][1] %}
         <col width={{ w }}>
