--- a/templates/spaTemp.html
+++ b/templates/spaTemp.html
@@ -1,9 +1,9 @@
     <!-- spa - the spa control -->
     <!-- spaTemp - the spa temp sensor -->
+    <!-- nSetValues - number of setValues to display -->
 
-    <br>
     <table border=0 width={{ widths[0] }} style='table-layout:fixed'>
-        <col width={{ widths[1][0]/2 }}><col width={{ widths[1][0]/2 }}>
+        <col width={{ (widths[1][0]/2)-2 }}><col width={{ widths[1][0]/2 }}>
         {% for w in widths[1][1:] %}
         <col width={{ w }}>
         {% endfor %}
@@ -15,7 +15,7 @@
             <div class=control>
             <form name='control' action='' method='get'>
                 <input type='hidden' name='resource' value='{{ spa.name }}' />
-                {% for value in spa.setValues(views).values()[:-1] %}
+                {% for value in spa.setValues(views).values()[:nSetValues] %}
                 <input type='submit' class='button' name='action' value='{{ value }}' />
                 {% endfor %}
             </form>
