Add pool pump control with flow

--- a/templates/iphone5.html
+++ b/templates/iphone5.html
@@ -21,6 +21,7 @@
         </tr>
     </table>
     {{ spaTempTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
+    {{ poolPumpControlTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1], poolPumpControl=poolPumpControl, poolPumpFlowSensor=poolPumpFlowSensor, nSetValues=5, views=views) }}
     <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
         {% for w in widths[1][1] %}
         <col width={{ w }}>
