--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,6 +19,7 @@
                 {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][0], group=weatherGroup, details=False, name=True, link=True, label=True, views=views) }}
                 {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][0], group=lightsGroup, details=False, name=True, link=True, label=True, views=views) }}
                 {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][0], group=poolGroup, details=False, name=True, link=True, label=True, views=views) }}
+                {{ poolPumpControlTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][0], poolPumpControl=poolPumpControl, poolPumpFlowSensor=poolPumpFlowSensor, nSetValues=5, views=views) }}
                 {{ spaTempTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][0], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=3, views=views) }}
             </td>
             <td>
