--- a/templates/iphone3gs.html
+++ b/templates/iphone3gs.html
@@ -10,34 +10,31 @@
     {{ script }}
 </head>
 <body>
+    <div class="bedside">
     <table border=0 width={{ widths[0][0] }} style='table-layout:fixed'>
-        {% for w in widths[0][1] %}
-        <col width={{ w }}>
-        {% endfor %}
+        {% for w in widths[0][1] %}<col width={{ w }}>{% endfor %}
         <tr>
             <td><div id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</div></td>
             <td><div id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</div></td>
         </tr>
     </table>
     <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
-        {% for w in widths[1][1] %}
-        <col width={{ w }}>
-        {% endfor %}
+        {% for w in widths[1][1] %}<col width={{ w }}>{% endfor %}
         <tr>
             <td><div id="{{ day.name }}" class="date">{{ day.getViewState(views) }}</div></td>
             <td><div id="{{ temp.name }}" class="tempF">{{ temp.getViewState(views) }}</div></td>
         </tr>
     </table>
     <table border=0 width={{ widths[2][0] }} style='table-layout:fixed'>
-        {% for w in widths[2][1] %}
-        <col width={{ w }}>
-        {% endfor %}
+        {% for w in widths[2][1] %}<col width={{ w }}>{% endfor %}
         {% for resource in resources %}
         <tr>
-            {{ resourceTemplate.render(resource=resource, views=views, details=False, label=True, stack=True) }}
+            {{ resourceTemplate.render(resource=resource, views=views, details=False, stack=True) }}
         </tr>
         {% endfor %}
     </table>
+    {{ hvac }}
+    </div>
 </body>
 </html>
 
