--- a/templates/spaTemp.html
+++ b/templates/spaTemp.html
@@ -28,7 +28,7 @@
         <col width={{ w }}>
         {% endfor %}
         <tr>
-            {{ resourceTemplate.render(resource=spaTempTarget, views=views, details=False, label=True) }}
+            {{ resourceTemplate.render(resource=spaTempTarget, views=views, details=False) }}
         </tr>
     </table>
 
