Get templates at lower levels

--- a/templates/group.html
+++ b/templates/group.html
@@ -1,5 +1,6 @@
     <!-- name - display the group name -->
     <!-- link - make the group name be a link -->
+{% set resourceTemplate = templates.get_template("resource.html") %}
 
     {% if name %}
     {% if link %}
