--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% set groupTemplate = templates.get_template("group.html") %}
+{% set spaTempTemplate = templates.get_template("spaTemp.html") %}
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
@@ -29,12 +30,12 @@
         <tr>
             <td>
                 <br>{{ hvac }}
-                {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][1][0], group=shadesGroup, details=False, name=False, views=views) }}
-                {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][1][0], group=lightsGroup, details=False, name=False, views=views) }}
+                {{ groupTemplate.render(templates=templates, widths=widths[1][1][0], group=shadesGroup, details=False, name=False, views=views) }}
+                {{ groupTemplate.render(templates=templates, widths=widths[1][1][0], group=lightsGroup, details=False, name=False, views=views) }}
             </td>
             <td>
-                <br>{{ spaTempTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][1][1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
-                {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths[1][1][1], group=sprinklersGroup, details=False, name=False, views=views) }}
+                <br>{{ spaTempTemplate.render(templates=templates, widths=widths[1][1][1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
+                {{ groupTemplate.render(templates=templates, widths=widths[1][1][1], group=sprinklersGroup, details=False, name=False, views=views) }}
             </td>
         </tr>
     </table>
