--- a/templates/details.html
+++ b/templates/details.html
@@ -1,3 +1,4 @@
+{% set groupTemplate = templates.get_template("group.html") %}
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
@@ -10,7 +11,7 @@
 <body>
     <h1>{{ title }}</h1>
     {% for group in groups %}
-        {{ groupTemplate.render(resourceTemplate=resourceTemplate, widths=widths, group=group, details=details, name=True, link=False, views=views) }}
+        {{ groupTemplate.render(templates=templates, widths=widths, group=group, details=details, name=True, link=False, views=views) }}
     {% endfor %}
 </body>
 </html>
