--- a/templates/iphone3gs.html
+++ b/templates/iphone3gs.html
@@ -1,3 +1,4 @@
+{% set resourceTemplate = templates.get_template("resource.html") %}
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
