Back house controls

--- a/templates/hvacControl.html
+++ b/templates/hvacControl.html
@@ -1,3 +1,4 @@
+{% set resourceTemplate = templates.get_template("resource.html") %}
     <!-- heatTargetControl - heat target control -->
     <!-- coolTargetControl - cool target control -->
     <!-- tempSensor - the temp sensor -->
