--- a/templates/hvacControl.html
+++ b/templates/hvacControl.html
@@ -13,7 +13,7 @@
             </td>
             <td>
             {% endif %}
-                <div id="{{ tempSensor.name }}" class="{{ tempSensor.type+'_'+tempSensor.getViewState(views) }}">{{ tempSensor.getViewState(views) }}</div></td>
+                <div id="{{ tempSensor.name }}" class="{{ tempSensor.name }}">{{ tempSensor.getViewState(views) }}</div></td>
             <td><div id="{{ thermostatUnitSensor.name }}" class="{{ thermostatUnitSensor.type+'_'+thermostatUnitSensor.getViewState(views) }}">{{ thermostatUnitSensor.getViewState(views) }}</div></td>
         </tr>
         <tr>{{ resourceTemplate.render(resource=heatTargetControl, views=views, details=False, stack=stack, label="Heat set") }}</tr>
