--- a/templates/spaTemp.html
+++ b/templates/spaTemp.html
@@ -10,7 +10,7 @@
         {% endfor %}
         <tr>
         <td><div class=label>{{ spa.label }}</div></td>
-        <td><div id="{{ spaTemp.name }}" class="{{ spaTemp.type+'_'+spaTemp.getViewState(views) }}">{{ spaTemp.getViewState(views) }}</div></td>
+        <td><div id="{{ spaTemp.name }}" class="{{ spaTemp.name }}">{{ spaTemp.getViewState(views) }}</div></td>
         <td><div id="{{ spa.name }}" class="{{ spa.type+'_'+spa.getViewState(views) }}">{{ spa.getViewState(views) }}</div></td>
         <td>
             <div class=control>
