--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                 {{ groupTemplate.render(templates=templates, widths=widths[1][1], group=shadesGroup, details=False, name=True, link=True, views=views) }}
                 <a href="/details?group=Hvac"><h2>Hvac</h2></a>{{ hvac }}
                 {{ groupTemplate.render(templates=templates, widths=widths[1][1], group=sprinklersGroup, details=False, name=True, link=True, views=views) }}
-                {{ groupTemplate.render(templates=templates, widths=widths[1][1], group=powerGroup, details=False, name=True, link=True, views=views) }}
+                <a href="/details?group=Power"><h2>Power</h2></a>{{ powerGroup }}
             </td>
         </tr>
     </table>
